docs(reference): update KNOWN_ISSUES.md for DTR 2.6.0
https://claude.ai/code/session_01Y8LUibcaDGLj74zvcefk1A